[package]
name = "cirrus-backend"
version = "0.1.0"
edition = "2021"
description = "A fast and simple personal cloud"

[dependencies]
axum = { version = "0.5", features = ["macros"] }
axum-extra = { version = "0.3", features = ["spa"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.20", features = ["full"] }
tower = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["rustls", "json"], default-features = false }
dotenv = "0.15.0"
lazy_static = "1.4"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
clap = { version = "3.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"