[package]
name = "cirrus-backend"
version = "0.1.0"
edition = "2021"
description = "A fast and simple personal cloud"

[dependencies]

tokio = { version = "1.20", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }

axum = { version = "0.5", features = ["macros"] }
axum-extra = { version = "0.3", features = ["spa"] }
axum-macros = "0.2"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls", "json"], default-features = false }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "auth"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
dotenv = "0.15.0"
lazy_static = "1.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3.24"

clap = { version = "3.2", features = ["derive"] }

argon2 = { version = "0.4", features = ["std"] }
rand = { version = "0.8", features = ["std"] }
rand_core = { version = "0.6", features = ["std"] }

tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }
log = "0.4"